--- a/react/package.json
+++ b/react/package.json
@@ -20,13 +20,15 @@
     "@types/ramda": "^0.26.5",
     "@types/react": "^16.9.31",
     "@vtex/test-tools": "^3.3.2",
-    "@vtex/tsconfig": "^0.4.4",
+    "@vtex/tsconfig": "^0.6.0",
+    "acctglobal.shelf-custom": "https://alinepoc--acctglobal.myvtex.com/_v/private/typings/linked/v1/acctglobal.shelf-custom@0.0.1+build1664212270/public/@types/acctglobal.shelf-custom",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.5.1",
     "graphql": "^14.6.0",
-    "typescript": "^3.9.6",
+    "typescript": "3.9.7",
     "vtex.css-handles": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.css-handles@0.4.4/public/@types/vtex.css-handles",
-    "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.120.0/public/@types/vtex.render-runtime",
-    "vtex.styleguide": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.styleguide@9.129.0/public/@types/vtex.styleguide"
+    "vtex.product-context": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.product-context@0.10.0/public/@types/vtex.product-context",
+    "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.132.4/public/@types/vtex.render-runtime",
+    "vtex.styleguide": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.styleguide@9.146.3/public/@types/vtex.styleguide"
   }
 }
