add shelf custom by brand

--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -7,7 +7,9 @@
     "types": ["node", "jest"],
     "module": "esnext",
     "moduleResolution": "node",
-    "target": "es2017"
+    "target": "es2017",
+    "noImplicitAny": false,
+    "lib": ["DOM"]
   },
   "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts"]
 }
