--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -11,5 +11,10 @@
     "noImplicitAny": false,
     "lib": ["DOM"]
   },
-  "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts"]
+  "include": [
+    "./typings/*.d.ts",
+    "./**/*.tsx",
+    "./**/*.ts",
+    "__tests__/ShelfCustom.spec.js"
+  ]
 }
